...
                                </label>
                                <view tag="100" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="exU-D2-N69">
                                    <rect key="frame" x="16" y="96" width="288" height="40"/>
                                    <subviews>
                                        <textField opaque="NO" tag="1000" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Client ID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="420-SR-fck">
                                            <rect key="frame" x="10" y="4" width="268" height="32"/>
                                            <accessibility key="accessibilityConfiguration" identifier="clientid"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits"/>
                                            <connections>
                                                <outlet property="delegate" destination="-1" id="S9B-yY-8VO"/>
                                            </connections>
                                        </textField>
...
                                </view>
                                <view tag="101" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g5H-6S-rgy">
                                    <rect key="frame" x="16" y="151" width="288" height="40"/>
                                    <subviews>
                                        <textField opaque="NO" tag="1001" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email ID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2Gy-4H-EPJ">
                                            <rect key="frame" x="10" y="4" width="268" height="32"/>
                                            <accessibility key="accessibilityConfiguration" identifier="email"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                            <connections>
                                                <outlet property="delegate" destination="-1" id="QC7-wB-lc9"/>
                                            </connections>
                                        </textField>
...
                                </view>
                                <view tag="102" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YJW-K8-up9">
                                    <rect key="frame" x="16" y="206" width="288" height="40"/>
                                    <subviews>
                                        <textField opaque="NO" tag="1002" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ade-AP-dOv">
                                            <rect key="frame" x="10" y="4" width="268" height="32"/>
                                            <accessibility key="accessibilityConfiguration" identifier="password"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                            <connections>
                                                <outlet property="delegate" destination="-1" id="tOF-mm-PFt"/>
                                            </connections>
                                        </textField>
...
                                </view>
                                <view tag="102" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TIV-No-ZYi" userLabel="BaseURL View">
                                    <rect key="frame" x="16" y="261" width="288" height="40"/>
                                    <subviews>
                                        <textField opaque="NO" tag="1002" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Base Url" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BlV-iL-tgv">
                                            <rect key="frame" x="10" y="4" width="268" height="32"/>
                                            <accessibility key="accessibilityConfiguration" identifier="baseurl"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits"/>
                                            <connections>
                                                <outlet property="delegate" destination="-1" id="DIT-Rh-UMC"/>
                                            </connections>
                                        </textField>
...
                                        <constraint firstItem="BlV-iL-tgv" firstAttribute="leading" secondItem="TIV-No-ZYi" secondAttribute="leading" constant="10" id="iph-4g-yAt"/>
                                    </constraints>
                                </view>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bZP-OT-b0V">
                                    <rect key="frame" x="0.0" y="430" width="320" height="50"/>
                                    <color key="backgroundColor" red="0.015686274509803921" green="0.62745098039215685" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    <accessibility key="accessibilityConfiguration" identifier="login"/>
                                    <constraints>
                                        <constraint firstAttribute="width" secondItem="bZP-OT-b0V" secondAttribute="height" multiplier="6.4" id="bqk-wm-BXA"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                    <state key="normal" title="LOGIN">
                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
