<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina4_0" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="VoiceVideoViewController" customModule="RibbonSample" customModuleProvider="target">
            <connections>
                <outlet property="audioButton" destination="ifp-AF-D6S" id="zSV-B8-wMQ"/>
                <outlet property="callButton" destination="p7L-tz-w7z" id="9B0-EU-5uY"/>
                <outlet property="txtDestNumber" destination="qcu-lS-sf2" id="nhK-U5-FqH"/>
                <outlet property="videoButton" destination="drj-ak-Nn0" id="1Y5-69-rvk"/>
                <outlet property="view" destination="SOO-nQ-soX" id="tFr-kA-g6a"/>
            </connections>
        </placeholder>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="SOO-nQ-soX">
            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="kGj-TC-3Jq">
                    <rect key="frame" x="16" y="69" width="288" height="80"/>
                    <subviews>
                        <button opaque="NO" tag="201" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ifp-AF-D6S">
                            <rect key="frame" x="0.0" y="0.0" width="288" height="40"/>
                            <accessibility key="accessibilityConfiguration" identifier="audio"/>
                            <inset key="titleEdgeInsets" minX="6" minY="0.0" maxX="0.0" maxY="0.0"/>
                            <state key="normal" title="Audio" image="unSelected">
                                <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </state>
                            <state key="selected" image="selected"/>
                            <connections>
                                <action selector="audioVideoButtonTapped:" destination="-1" eventType="touchUpInside" id="4AC-t7-qWh"/>
                            </connections>
                        </button>
                        <button opaque="NO" tag="202" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="drj-ak-Nn0">
                            <rect key="frame" x="0.0" y="40" width="288" height="40"/>
                            <accessibility key="accessibilityConfiguration" identifier="video"/>
                            <inset key="titleEdgeInsets" minX="6" minY="0.0" maxX="0.0" maxY="0.0"/>
                            <state key="normal" title="Video" image="unSelected">
                                <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </state>
                            <state key="selected" image="selected"/>
                            <connections>
                                <action selector="audioVideoButtonTapped:" destination="-1" eventType="touchUpInside" id="mRN-sP-Xq9"/>
                            </connections>
                        </button>
                    </subviews>
                    <constraints>
                        <constraint firstAttribute="height" constant="80" id="nOu-qO-cYG"/>
                    </constraints>
                </stackView>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p7L-tz-w7z">
                    <rect key="frame" x="0.0" y="523" width="320" height="45"/>
                    <color key="backgroundColor" red="0.015686274510000001" green="0.62745098040000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <accessibility key="accessibilityConfiguration" identifier="btnCall"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="45" id="185-qT-zxe"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                    <state key="normal" title="Call">
                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </state>
                    <connections>
                        <action selector="callButtonTapped:" destination="-1" eventType="touchUpInside" id="TnV-EC-onl"/>
                    </connections>
                </button>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qcu-lS-sf2">
                    <rect key="frame" x="16" y="20" width="288" height="34"/>
                    <accessibility key="accessibilityConfiguration" identifier="txtCallee"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits"/>
                    <connections>
                        <outlet property="delegate" destination="-1" id="c2g-XY-yCR"/>
                    </connections>
                </textField>
            </subviews>
            <viewLayoutGuide key="safeArea" id="2Nv-9r-GKW"/>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <constraints>
                <constraint firstItem="p7L-tz-w7z" firstAttribute="leading" secondItem="2Nv-9r-GKW" secondAttribute="leading" id="EWd-E7-BOM"/>
                <constraint firstItem="qcu-lS-sf2" firstAttribute="leading" secondItem="2Nv-9r-GKW" secondAttribute="leading" constant="16" id="Ldc-dq-SDc"/>
                <constraint firstItem="kGj-TC-3Jq" firstAttribute="top" secondItem="qcu-lS-sf2" secondAttribute="bottom" constant="15" id="Quq-2M-riU"/>
                <constraint firstItem="2Nv-9r-GKW" firstAttribute="trailing" secondItem="kGj-TC-3Jq" secondAttribute="trailing" constant="16" id="cQ4-x2-tTa"/>
                <constraint firstItem="2Nv-9r-GKW" firstAttribute="trailing" secondItem="qcu-lS-sf2" secondAttribute="trailing" constant="16" id="csj-ct-8S4"/>
                <constraint firstItem="kGj-TC-3Jq" firstAttribute="leading" secondItem="2Nv-9r-GKW" secondAttribute="leading" constant="16" id="gIf-k3-8ZB"/>
                <constraint firstItem="2Nv-9r-GKW" firstAttribute="trailing" secondItem="p7L-tz-w7z" secondAttribute="trailing" id="ke6-gM-kSz"/>
                <constraint firstItem="qcu-lS-sf2" firstAttribute="top" secondItem="2Nv-9r-GKW" secondAttribute="top" constant="20" id="tFA-dt-gJG"/>
                <constraint firstItem="p7L-tz-w7z" firstAttribute="bottom" secondItem="2Nv-9r-GKW" secondAttribute="bottom" id="uf7-WK-57M"/>
            </constraints>
            <point key="canvasLocation" x="-384" y="91"/>
        </view>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
    </objects>
    <resources>
        <image name="selected" width="30" height="30"/>
        <image name="unSelected" width="30" height="30"/>
    </resources>
</document>
