...
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QkF-rh-9aT">
                    <rect key="frame" x="16" y="20" width="288" height="30"/>
                    <accessibility key="accessibilityConfiguration" identifier="sender"/>
                    <constraints>
                        <constraint firstAttribute="width" secondItem="QkF-rh-9aT" secondAttribute="height" multiplier="48:5" id="jW7-pj-c0f"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits"/>
                    <connections>
                        <outlet property="delegate" destination="-1" id="exv-Mh-FZJ"/>
                    </connections>
                </textField>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f7G-cX-06q">
                    <rect key="frame" x="16" y="58" width="288" height="30"/>
                    <accessibility key="accessibilityConfiguration" identifier="destination"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="30" id="U5O-Ww-oc9"/>
                        <constraint firstAttribute="width" secondItem="f7G-cX-06q" secondAttribute="height" multiplier="48:5" id="qa5-VL-pUB"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits"/>
...
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="the-Tg-dxg">
                    <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                    <subviews>
                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="V4m-Sw-hFy" customClass="KMPlaceholderTextView" customModule="KMPlaceholderTextView">
                            <rect key="frame" x="4" y="2" width="260" height="40"/>
                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <accessibility key="accessibilityConfiguration" identifier="smstext"/>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Enter text"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                            <constraints>
                                <constraint firstAttribute="height" constant="1" id="hi5-sv-upL"/>
                            </constraints>
                        </imageView>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="52J-Zl-oqS">
                            <rect key="frame" x="270" y="2" width="46" height="40"/>
                            <accessibility key="accessibilityConfiguration" identifier="btnsendsms"/>
                            <constraints>
                                <constraint firstAttribute="width" constant="46" id="w4z-Th-K7H"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                            <state key="normal" title="Send">
                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
