...
        if self.email_Field.isEmpty(){
            Alert.instance.showAlert(msg: "Enter valid Email ID", title: "Error", sender: self)
            return
        }
        
        if !GlobalFunctions.sharedInstance.isValidEmail(testStr: self.email_Field.text ?? ""){
            Alert.instance.showAlert(msg: "Enter valid EmailId", title: "Error", sender: self)
            return
        }
        
        if self.password_Field.isEmpty(){
            Alert.instance.showAlert(msg: "Enter Password", title: "Error", sender: self)
            return
...
                
                DispatchQueue.main.async { () -> Void in
                    LoaderClass.sharedInstance.hideOverlayView()
                    
                    guard let response = json else{
                        UserDefaultsClass.sharedInstance.setIsUserLoggedIn(isLoggedIn: false)
                        Alert.instance.showAlert(msg: "No data found.", title: "Error", sender: self)
                        return
                    }
                    
                    let loginModel = AuthenticationModel.init(json: response)
                    
                    if loginModel.id_token == "", loginModel.access_token == ""{
...
